syntax = "proto3";
package message;

message OrderRequest {
    string orderId = 1;
    int64 timestamp = 2;
}

message OrderInfo {
    string orderId = 1;
    string orderName = 2;
    string orderStatus = 3;
}

service OrderService {
    rpc GetOrderInfo(OrderRequest) returns (OrderInfo);
}